<resources>
    <string name="app_name">Trabajo Practico Inmobiliaria</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="perfil">Perfil</string>
    <string name="inmuebles">Inmuebles</string>
    <string name="contratos_e_inquilinos">Contratos e inquilinos</string>
    <string name="salir">Salir</string>
    <string name="editar">EDITAR</string>
    <string name="informaci_n_del_inmueble">Información del inmueble</string>
    <string name="cambiar">CAMBIAR</string>
    <string name="cambia_tu_contrase_a">Cambia tu contraseña</string>
    <string name="a_adir_un_nuevo_inmueble">Añadir un nuevo inmueble</string>
    <string name="informaci_n_del_contrato">Información del contrato</string>
    <string name="informaci_n_del_inquilino">Información del inquilino</string>
    <string name="informaci_n_de_los_pagos">Información de los pagos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

    <string-array name="tipos_inmueble">
        <item>Seleccione un tipo</item>
        <item>Casa</item>
        <item>Departamento</item>
        <item>Local</item>
    </string-array>

    <string-array name="usos_inmueble">
        <item>Seleccione un uso</item>
        <item>Residencial</item>
        <item>Comercial</item>
    </string-array>

</resources>