<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.home.HomeFragment"
        android:label="@string/ubicaci_n"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.gallery.GalleryFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.slideshow.SlideshowFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/salirFragment"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.logout.SalirFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_salir" />

    <fragment
        android:id="@+id/inquilinoContratoFragment"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.inquilino_contrato.InquilinoContratoFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inquilino_contrato" />
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.example.trabajopracticoinmobiliaria.menu.ui.slideshow.DetalleInmuebleFragment"
        android:label="@string/informaci_n_del_inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" />
</navigation>